--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.21.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "vue-tsc": "^2.2.8"
   }
 }
